--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       # Specify the version you desire here
       - image: circleci/php:7.1-browsers
-      - image: circleci/mysql:5.7
+      - image: circleci/mariadb:10.6
         environment:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_USER: root
