--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,63 @@
 version: 2
+
 jobs:
   build:
     docker:
-      # Specify the version you desire here
-      - image: circleci/php:7.4-browsers
-      - image: circleci/mariadb:10.6
+      - image: circleci/php:7.4-node-browsers
         environment:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_USER: root
-          MYSQL_ROOT_PASSWORD: ''
-          MYSQL_DATABASE: roast
+            MYSQL_HOST: 127.0.0.1
+            MYSQL_DB: roast
+            MYSQL_USER: root
+            MYSQL_ALLOW_EMPTY_PASSWORD: yes
+            MYSQL_PASSWORD: ""
+      - image: mariadb:10.6
+        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin --innodb-large-prefix=true --innodb-file-format=Barracuda
+        environment:
+            MYSQL_USER: root
+            MYSQL_ALLOW_EMPTY_PASSWORD: yes
 
     working_directory: ~/roast
 
     steps:
       - checkout
+      - run: sudo apt install -y mysql-client
       - run: sudo composer self-update
-
-      # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "composer.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: composer install -n --prefer-dist
-
+              - composer-v1-{{ checksum "composer.lock" }}
+              - composer-v1-
+      - run: mv .env.testing .env
+      - run: composer install -n --ignore-platform-reqs
       - save_cache:
+          key: composer-v1-{{ checksum "composer.lock" }}
           paths:
-            - ./vendor
-          key: v1-dependencies-{{ checksum "composer.json" }}
-
+              - vendor
+      - restore_cache: # special step to restore the dependency cache if `package.json` does not change
+          keys:
+              - node-v1-{{ checksum "package.json" }}
+              # fallback to using the latest cache if no exact match is found (See https://circleci.com/docs/2.0/caching/)
+              - node-v1-
+      - run: npm install
+      - save_cache: # special step to save the dependency cache with the `package.json` cache key template
+          key: node-v1-{{ checksum "package.json" }}
+          paths:
+              - node_modules
+      - run: npm run production
       - run:
-          name: Setup Laravel stuffs
-          command:
-            php artisan migrate --force
-      - run: ./vendor/bin/phpunit
-
-workflows:
-  version: 2
-  notify_deploy:
-    jobs:
-      - build
+          name: Mysql database
+          command: mysql -h 127.0.0.1 -u root -e "create database roast;"
+      - run: php artisan key:generate
+      - run: php artisan migrate
+      - run: php artisan passport:install
+      - run:
+          name: Run Laravel Server
+          command: php artisan serve
+          background: true
+      - run: vendor/bin/phpunit
+      # - run:
+      #     name: Start Chrome Driver
+      #     command: ./vendor/laravel/dusk/bin/chromedriver-linux
+      #     background: true
+      # - run:
+      #     name: Run Laravel Dusk Tests
+      #     command: php artisan dusk
