--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,64 +1,56 @@
 version: 2
-
 jobs:
   build:
     docker:
-      - image: circleci/php:7.4-node-browsers
-        environment:
-            MYSQL_HOST: 127.0.0.1
-            MYSQL_DB: roast
-            MYSQL_USER: root
-            MYSQL_ALLOW_EMPTY_PASSWORD: yes
-            MYSQL_PASSWORD: ""
-      - image: mariadb:10.6
-        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin --innodb-large-prefix=true --innodb-file-format=Barracuda
-        environment:
-            MYSQL_USER: root
-            MYSQL_ALLOW_EMPTY_PASSWORD: yes
+      # Specify the version you desire here
+      - image: circleci/php:7.3-stretch-node-browsers
 
-    working_directory: ~/roast
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # Using the RAM variation mitigates I/O contention
+      # for database intensive operations.
+      # - image: circleci/mysql:5.7-ram
+      # 
+      # - image: redis:3
 
     steps:
       - checkout
-      - run: sudo docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
-      - run: sudo apt install -y defalut-mysql-client
-      - run: sudo composer self-update
+
+      - run: sudo apt update && sudo apt install zlib1g-dev libsqlite3-dev
+      - run: sudo docker-php-ext-install zip
+
+      # Download and cache dependencies
+
+      # composer cache
       - restore_cache:
           keys:
-              - composer-v1-{{ checksum "composer.lock" }}
-              - composer-v1-
-      - run: mv .env.testing .env
-      - run: composer install -n --ignore-platform-reqs
+          # "composer.json" can be used if "composer.json"
+          # is not committed to the repository.
+          - v1-dependencies-{{ checksum "composer.lock" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
+      - run: composer install -n --prefer-dist
+
       - save_cache:
           key: composer-v1-{{ checksum "composer.lock" }}
           paths:
-              - vendor
-      - restore_cache: # special step to restore the dependency cache if `package.json` does not change
+            - vendor
+
+      # node cache
+
+      - restore_cache:
           keys:
-              - node-v1-{{ checksum "package.json" }}
-              # fallback to using the latest cache if no exact match is found (See https://circleci.com/docs/2.0/caching/)
-              - node-v1-
+            - node-v4-{{ checksum "package.json" }}
+            - node-v4-
       - run: npm install
-      - save_cache: # special step to save the dependency cache with the `package.json` cache key template
-          key: node-v1-{{ checksum "package.json" }}
+      - save_cache:
+          key: node-v4-{{ checksum "package.json" }}
           paths:
-              - node_modules
-      - run: npm run production
-      - run:
-          name: Mysql database
-          command: mysql -h 127.0.0.1 -u root -e "create database roast;"
-      - run: php artisan key:generate
-      - run: php artisan migrate
-      - run: php artisan passport:install
-      - run:
-          name: Run Laravel Server
-          command: php artisan serve
-          background: true
-      - run: vendor/bin/phpunit
-      # - run:
-      #     name: Start Chrome Driver
-      #     command: ./vendor/laravel/dusk/bin/chromedriver-linux
-      #     background: true
-      # - run:
-      #     name: Run Laravel Dusk Tests
-      #     command: php artisan dusk
+            - node_modules
+            - ~/.yarn
+
+      # prepare the database
+      - run: touch storage/testing.sqlite
+      - run: php artisan migrate --env=testing --database=sqlite_testing --force
