--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,38 +19,35 @@ jobs:
       - checkout
 
       # Download and cache dependencies
-
+      - run: sudo composer self-update
       # composer cache
       - restore_cache:
           keys:
-          # "composer.json" can be used if "composer.json"
-          # is not committed to the repository.
-          - v1-dependencies-{{ checksum "composer.lock" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: composer install -n --prefer-dist
-
+              - composer-v1-{{ checksum "composer.lock" }}
+              - composer-v1-
+      - run: mv .env.testing .env
+      - run: composer install -n --ignore-platform-reqs
       - save_cache:
           key: composer-v1-{{ checksum "composer.lock" }}
           paths:
-            - vendor
-
-      # node cache
-
-      - restore_cache:
+              - vendor
+      - restore_cache: # special step to restore the dependency cache if `package.json` does not change
           keys:
-            - node-v4-{{ checksum "package.json" }}
-            - node-v4-
+              - node-v1-{{ checksum "package.json" }}
+              # fallback to using the latest cache if no exact match is found (See https://circleci.com/docs/2.0/caching/)
+              - node-v1-
       - run: npm install
-      - save_cache:
-          key: node-v4-{{ checksum "package.json" }}
+      - save_cache: # special step to save the dependency cache with the `package.json` cache key template
+          key: node-v1-{{ checksum "package.json" }}
           paths:
-            - node_modules
-            - ~/.yarn
+              - node_modules
+      - run: npm run production
 
-      # prepare the database
-      - run: ./vendor/bin/phpunit
+      - run:
+          name: Run Laravel Server
+          command: php artisan serve
+          background: true
+      - run: vendor/bin/phpunit
 
 workflows:
   my-workflow:
