--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=testing
-APP_KEY=
+APP_KEY=base64:h+/yQug6Fv3SKRiGL5+DF8++3vEarwiL6H5s/m0vcR4=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 
